--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-color: #10002b;
   color: white;
   text-align: center; 
-  font-family: cursive;
+  font-family: Verdana, Geneva, sans-serif;
   font-size:20px;  
 }
 /* all headings on page */
