--- a/RPSStyle.css
+++ b/RPSStyle.css
@@ -28,3 +28,9 @@ input[type=button], input[type=reset]{
   border-color: black;
 }
 	
+div {
+  padding: 50px;
+  text-align: left;
+  margin-left: 25%;
+  margin-right: 25%;
+}
