--- a/RPSStyle.css
+++ b/RPSStyle.css
@@ -3,7 +3,7 @@ body {
 	background-image: url('Rock-Paper-scissors.jpg');
 	background-repeat: no-repeat;
 	background-attachment:fixed;
-	background-size: fill;
+	background-size: cover;
 	}
 
 
